# client_for_blockchain

./: .travis.yml  CMakeLists.txt  README.md  documentation_for_blockchain_client.docx
project/: client_main.cpp
